unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/bt_stripe__Subscription_Schedule__c.object-meta.xml
<CustomObject>
    <description>Used by Stripe Billing. This stores and syncs Subscription Schedule data.</description>
    <label>Subscription Schedule</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Subscription Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>