unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Billing_Cycle_Anchor__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Billing_Cycle_Anchor__c</fullName>
    <label>Billing Cycle Anchor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase Start</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>