unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Completed_Date__c</fullName>
    <description>The time at which the subscription schedule was completed.</description>
    <inlineHelpText>The time at which the subscription schedule was completed.</inlineHelpText>
    <label>Completed On Date</label>
    <type>DateTime</type>
</CustomField>