unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Created__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Created__c</fullName>
    <description>The date and time this Schedule was created in the Payment Gateway.</description>
    <inlineHelpText>The date and time this Schedule was created in the Payment Gateway.</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>