unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Current_Period_End__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Current_Period_End__c</fullName>
    <description>End of the current period that the subscription has been invoiced for. At the end of this period, a new invoice will be created.</description>
    <inlineHelpText>End of the current period that the subscription has been invoiced for. At the end of this period, a new invoice will be created.</inlineHelpText>
    <label>Current Period End</label>
    <type>DateTime</type>
</CustomField>