unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Current_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Current_Period_Start__c</fullName>
    <description>Start of the current period that the subscription has been invoiced for.</description>
    <inlineHelpText>Start of the current period that the subscription has been invoiced for.</inlineHelpText>
    <label>Current Period Start</label>
    <type>DateTime</type>
</CustomField>