unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer who owns the subscription schedule.</description>
    <inlineHelpText>Customer who owns the subscription schedule.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>bt_stripe__Stripe_Customer__c</referenceTo>
    <relationshipLabel>Subscription Schedules</relationshipLabel>
    <relationshipName>Subscription_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>