unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Method for the Schedule. It must belong to the Customer associated with the Subscription and be in a chargeable state. If not set, defaults to the Customer&#39;s default Payment Method.</description>
    <inlineHelpText>The Payment Method for the Schedule. It must belong to the Customer associated with the Subscription and be in a chargeable state. If not set, defaults to the Customer&#39;s default Payment Method.</inlineHelpText>
    <label>Default Payment Method</label>
    <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
    <relationshipLabel>Subscription Schedule</relationshipLabel>
    <relationshipName>Subscription_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>