unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Status__c</fullName>
    <description>The present status of the subscription schedule.</description>
    <inlineHelpText>The present status of the subscription schedule.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>