unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Subscription__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subscription managed by the subscription schedule.</description>
    <inlineHelpText>Subscription managed by the subscription schedule.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>bt_stripe__Subscription2__c</referenceTo>
    <relationshipLabel>Subscription Schedules</relationshipLabel>
    <relationshipName>Subscription_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>