unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/fields/bt_stripe__Subscription_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Subscription_Schedule_Id__c</fullName>
    <description>Stripe Id for the schedule</description>
    <externalId>true</externalId>
    <inlineHelpText>Stripe Id for the schedule</inlineHelpText>
    <label>Subscription Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>