unpackaged/main/default/objects/bt_stripe__Subscription_Schedule__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Customer__c</columns>
    <columns>bt_stripe__Status__c</columns>
    <columns>bt_stripe__Subscription__c</columns>
    <columns>bt_stripe__Start_Date__c</columns>
    <columns>bt_stripe__Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>